--- a/core/components/markitup/documents/changelog.txt
+++ b/core/components/markitup/documents/changelog.txt
@@ -1,5 +1,13 @@
 История изменений редактора markitUp!
 
+markitUp! 0.0.5
+====================================
+- Исправлена ошибка "Invalid arguments passed"
+- Исправлена фатальная ошибка в JavaScript коде
+- Обновлен редактор markitUp до последней версии с GitHub
+- Добавлен параметр loadJquery определяющий производить ли загрузку jQuery библиотеки
+- Добавлен параметр AjaxManager определяющий метод загрузки JavaScript файлов
+
 markitUp! 0.0.4
 ====================================
 - Добавлена поддержка AjaxManager
