--- a/core/components/markitup/documents/changelog.txt
+++ b/core/components/markitup/documents/changelog.txt
@@ -4,6 +4,7 @@ markitUp! 0.0.5
 ====================================
 - Исправлена ошибка "Invalid arguments passed"
 - Исправлена фатальная ошибка в JavaScript коде
+- Исправлен лексикон для системных настроек
 - Обновлен редактор markitUp до последней версии с GitHub
 - Добавлен параметр loadJquery определяющий производить ли загрузку jQuery библиотеки
 - Добавлен параметр AjaxManager определяющий метод загрузки JavaScript файлов
